Fixed text align

--- a/src/pages/Trips/Trips.css
+++ b/src/pages/Trips/Trips.css
@@ -9,3 +9,7 @@
     justify-content: space-between;
     align-items: center;
 }
+
+.my-trips__items {
+    text-align: left;
+}
